YTI-995: Adding information symbol and help text to subscription enabling / disabling functionality.

--- a/po/fi.po
+++ b/po/fi.po
@@ -2017,6 +2017,12 @@ msgstr "Ilmoitusten tilaus epäonnistui."
 msgid "Subscription deletion failed."
 msgstr "Ilmoitusten poisto epäonnistui."
 
+msgid "INFO_TEXT_EMAIL_SUBSCRIPTIONS"
+msgstr ""
+"Tällä toiminnolla valitaan, onko ilmoitustoiminto aktiivinen. Ottamalla "
+"rastin pois kohdasta “Päivittäin” voit kytkeä kaikki ilmoitukset pois päältä "
+"kerralla. Palauttamalla rastin ilmoitukset aktivoituvat jälleen."
+
 msgid "Example"
 msgstr "Esimerkki"
 
