--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-11-04 10:57+0200\n"
+"PO-Revision-Date: 2019-11-18 17:51+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1980,6 +1980,12 @@ msgstr ""
 
 msgid "Subscription deletion failed."
 msgstr ""
+
+msgid "INFO_TEXT_EMAIL_SUBSCRIPTIONS"
+msgstr ""
+"This functionality chooses whether or not subscriptions are active. By "
+"unchecking “Daily” you can disable all subscriptions at once. Checking it "
+"activates the subscriptions again."
 
 msgid "Example"
 msgstr ""
