YTI-1142 Change front page model search info text

--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-11-18 17:51+0200\n"
+"PO-Revision-Date: 2019-11-25 12:38+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -365,8 +365,8 @@ msgstr ""
 
 msgid "INFO_TEXT_FRONTPAGE_SEARCH"
 msgstr ""
-"The names of the models are searched as a default. You may search with more "
-"options by clicking \"Advanced search\" link."
+"The names of the models are searched as a default. You may search also with "
+"content by clicking \"Extend search\" checkbox."
 
 msgid "Search term"
 msgstr ""
