YTI-971 Change resource statuses too with model status by checkbox
Also change status updating alert modal message text in mass migrate statuses modal,

--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-11-26 14:18+0200\n"
+"PO-Revision-Date: 2019-12-12 12:46+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -462,6 +462,9 @@ msgid "Edit reference data"
 msgstr ""
 
 msgid "Enforce status transition rules"
+msgstr ""
+
+msgid "Change resource statuses as well"
 msgstr ""
 
 msgid ""
@@ -2011,8 +2014,8 @@ msgstr ""
 msgid "Choose target status"
 msgstr ""
 
-msgid "Please wait. This could take a while..."
-msgstr ""
+msgid "UPDATING_STATUSES_MESSAGE"
+msgstr "Updating datamodel's resources' statuses"
 
 msgid "Example"
 msgstr ""
