--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-12-18 09:17+0200\n"
+"PO-Revision-Date: 2019-12-18 14:40+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -103,7 +103,9 @@ msgstr ""
 msgid " resources."
 msgstr ""
 
-msgid "Statuses changed."
+msgid ""
+"No resources were found with the starting status. No changes to resources "
+"statuses."
 msgstr ""
 
 msgid "Reference data"
