--- a/po/fi.po
+++ b/po/fi.po
@@ -1174,8 +1174,8 @@ msgstr ""
 "Täältä voit lisätä luokalle uuden attribuutin jonka arvoalue perustuu "
 "tietotyyppiin tai assosiaation jolla viitataan toiseen luokkaan"
 
-msgid "Use class"
-msgstr "Käytä luokkaa"
+msgid "Specialize class"
+msgstr "Tarkenna luokka"
 
 msgid "not found in the concept database"
 msgstr "ei löydy sanastosta"
@@ -1681,11 +1681,11 @@ msgstr "Erikoistamattomia luokkia ei saa valita"
 msgid "Non specialized classes are not allowed"
 msgstr "Erikoistamattomia luokkia ei saavalita"
 
+msgid "Use class"
+msgstr "Käytä luokkaa"
+
 msgid "Define concept for the class"
 msgstr "Määrittele käsite luokalle"
-
-msgid "Specialize class"
-msgstr "Tarkenna luokka"
 
 msgid "Copy shape"
 msgstr "Kopioi tarkennettu luokka"
@@ -2076,6 +2076,14 @@ msgstr "Valitse kohdetila"
 
 msgid "UPDATING_STATUSES_MESSAGE"
 msgstr "Muutetaan tietomallin resurssien tiloja"
+
+msgid "Change resource statuses at the same time?"
+msgstr "Vaihda samalla resurssien tilat?"
+
+msgid "CHANGE RESOURCE STATUSES TOO?"
+msgstr ""
+"Muutetaanko myös kaikki tilassa {{startStatus}} olleet resurssit tilaan "
+"{{endStatus}}?"
 
 msgid "Example"
 msgstr "Esimerkki"
