--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-12-19 16:47+0200\n"
+"PO-Revision-Date: 2020-01-24 15:19+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -108,6 +108,20 @@ msgid ""
 "statuses."
 msgstr ""
 
+msgid "New version of datamodel is created"
+msgstr ""
+
+msgid "Create new version of datamodel"
+msgstr ""
+
+msgid ""
+"Define prefix for the new version. Note that prefix is used to define the "
+"new namespace."
+msgstr ""
+
+msgid "Save"
+msgstr ""
+
 msgid "Reference data"
 msgstr ""
 
@@ -175,6 +189,9 @@ msgid "Remove email subscription"
 msgstr ""
 
 msgid "Update datamodel's resources' statuses"
+msgstr ""
+
+msgid "Create new version"
 msgstr ""
 
 msgid "No referrers"
@@ -309,9 +326,6 @@ msgid "Select concept"
 msgstr "Search for {{name}}"
 
 msgid "No concept defined"
-msgstr ""
-
-msgid "Save"
 msgstr ""
 
 msgid "Invalid url error"
@@ -1143,7 +1157,7 @@ msgstr "Terminology"
 msgid "You can add new attribute or association to the Class from here"
 msgstr ""
 
-msgid "Specialize class"
+msgid "Copy shape"
 msgstr ""
 
 msgid "not found in the concept database"
@@ -1651,10 +1665,10 @@ msgstr ""
 msgid "Use class"
 msgstr ""
 
-msgid "Define concept for the class"
+msgid "Specialize class"
 msgstr ""
 
-msgid "Copy shape"
+msgid "Define concept for the class"
 msgstr ""
 
 msgid "Can be selected only from this library"
@@ -2045,8 +2059,11 @@ msgstr ""
 "Should all the resources with status {{startStatus}} be changed to status "
 "{{endStatus}}?"
 
-msgid "Example"
-msgstr ""
+msgid "CREATING_NEW_MODEL_VERSION_MESSAGE"
+msgstr "Creating the new version of datamodel"
+
+msgid "Example info"
+msgstr "Example value for the property"
 
 msgid "Editorial note"
 msgstr ""
@@ -2272,11 +2289,11 @@ msgstr ""
 msgid "Specialized from class info"
 msgstr "Reference to the Class of the Shape"
 
+msgid "Example"
+msgstr ""
+
 msgid "Definition info"
 msgstr "Definition of the concept"
-
-msgid "Example info"
-msgstr "Example value for the property"
 
 msgid "Value class"
 msgstr ""
@@ -2338,6 +2355,12 @@ msgstr ""
 
 msgid "Namespace info"
 msgstr "Namespaces are used to identify and resolve resources"
+
+msgid "Previous version"
+msgstr ""
+
+msgid "Previous version info"
+msgstr "Link to previous version"
 
 msgid "Resource identifier"
 msgstr "Resource identifier"
