--- a/po/fi.po
+++ b/po/fi.po
@@ -109,6 +109,22 @@ msgstr ""
 "Tilaa ei vaihdettu yhteenkään resurssiin. Ei löytynyt resursseja "
 "vaihdettavassa tilassa."
 
+msgid "New version of datamodel is created"
+msgstr "Luotu uusi versio tietomallista"
+
+msgid "Create new version of datamodel"
+msgstr "Luo uusi versio tietomallista"
+
+msgid ""
+"Define prefix for the new version. Note that prefix is used to define the "
+"new namespace."
+msgstr ""
+"Määrittele uudelle versiolle etuliite. Annettu etuliite on osa uuden "
+"tietomallin nimiavaruutta."
+
+msgid "Save"
+msgstr "Tallenna"
+
 msgid "Reference data"
 msgstr "Koodisto"
 
@@ -177,6 +193,9 @@ msgstr "Poista sähköposti-ilmoitukset"
 
 msgid "Update datamodel's resources' statuses"
 msgstr "Muuta tietomallin resurssien tiloja"
+
+msgid "Create new version"
+msgstr "Luo uusi versio"
 
 msgid "No referrers"
 msgstr "Ei viittauksia"
@@ -309,9 +328,6 @@ msgstr "Valitse käsite"
 
 msgid "No concept defined"
 msgstr "Käsitettä ei ole määritelty"
-
-msgid "Save"
-msgstr "Tallenna"
 
 msgid "Invalid url error"
 msgstr "Syöte ei ole URL"
@@ -1174,8 +1190,8 @@ msgstr ""
 "Täältä voit lisätä luokalle uuden attribuutin jonka arvoalue perustuu "
 "tietotyyppiin tai assosiaation jolla viitataan toiseen luokkaan"
 
-msgid "Specialize class"
-msgstr "Tarkenna luokka"
+msgid "Copy shape"
+msgstr "Kopioi tarkennettu luokka"
 
 msgid "not found in the concept database"
 msgstr "ei löydy sanastosta"
@@ -1684,11 +1700,11 @@ msgstr "Erikoistamattomia luokkia ei saavalita"
 msgid "Use class"
 msgstr "Käytä luokkaa"
 
+msgid "Specialize class"
+msgstr "Tarkenna luokka"
+
 msgid "Define concept for the class"
 msgstr "Määrittele käsite luokalle"
-
-msgid "Copy shape"
-msgstr "Kopioi tarkennettu luokka"
 
 msgid "Can be selected only from this library"
 msgstr "Valinta on tehtävä tietokomponenettikirjaston luokista"
@@ -2085,8 +2101,11 @@ msgstr ""
 "Muutetaanko myös kaikki tilassa {{startStatus}} olleet resurssit tilaan "
 "{{endStatus}}?"
 
-msgid "Example"
-msgstr "Esimerkki"
+msgid "CREATING_NEW_MODEL_VERSION_MESSAGE"
+msgstr "Luodaan uutta versiota tietomallista"
+
+msgid "Example info"
+msgstr "Esimerkkiarvo ominaisuudelle"
 
 msgid "Editorial note"
 msgstr "Muokkaajan kommentti"
@@ -2323,11 +2342,11 @@ msgstr "Tarkennettu luokasta"
 msgid "Specialized from class info"
 msgstr "Luokka jota soveltamisprofiilissa on tarkennettu"
 
+msgid "Example"
+msgstr "Esimerkki"
+
 msgid "Definition info"
 msgstr "Käsitteen määritelmä"
-
-msgid "Example info"
-msgstr "Esimerkkiarvo ominaisuudelle"
 
 msgid "Value class"
 msgstr "Kohde"
@@ -2392,6 +2411,12 @@ msgstr "Nimiavaruus"
 
 msgid "Namespace info"
 msgstr "Nimiavaruus jota käytetään resurssien yksilöintiin ja resolvointiin"
+
+msgid "Previous version"
+msgstr "Aiempi versio"
+
+msgid "Previous version info"
+msgstr "Linkki edeltävään versioon"
 
 msgid "Resource identifier"
 msgstr "Resurssin tunniste"
