--- a/po/sv.po
+++ b/po/sv.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2020-02-10 16:50+0200\n"
+"PO-Revision-Date: 2020-02-13 11:46+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: sv\n"
@@ -97,10 +97,10 @@ msgid "Status changed to one resource."
 msgstr "Status har ändrats för en resurs."
 
 msgid "Status changed to "
-msgstr "Status har ändrats"
+msgstr "Status har ändrats för "
 
 msgid " resources."
-msgstr " för resursen."
+msgstr " resursen."
 
 msgid ""
 "No resources were found with the starting status. No changes to resources "
