--- a/po/template.pot
+++ b/po/template.pot
@@ -94,9 +94,7 @@ msgstr ""
 msgid " resources."
 msgstr ""
 
-msgid ""
-"No resources were found with the starting status. No changes to resources "
-"statuses."
+msgid "No resources were found with the starting status. No changes to resources statuses."
 msgstr ""
 
 msgid "New version of datamodel is created"
@@ -105,9 +103,7 @@ msgstr ""
 msgid "Create new version of datamodel"
 msgstr ""
 
-msgid ""
-"Define prefix for the new version. Note that prefix is used to define the "
-"new namespace."
+msgid "Define prefix for the new version. Note that prefix is used to define the new namespace."
 msgstr ""
 
 msgid "Save"
@@ -470,9 +466,7 @@ msgstr ""
 msgid "Change resource statuses as well"
 msgstr ""
 
-msgid ""
-"Please note that the content of this field is public. Don't use personal "
-"contact information!"
+msgid "Please note that the content of this field is public. Don't use personal contact information!"
 msgstr ""
 
 msgid "You will receive an email notification when this resource changes."
@@ -583,9 +577,7 @@ msgstr ""
 msgid "Send"
 msgstr ""
 
-msgid ""
-"You have subscribed to be notified via email when the following resources "
-"change. To remove the subscription, click the icon next to the resource."
+msgid "You have subscribed to be notified via email when the following resources change. To remove the subscription, click the icon next to the resource."
 msgstr ""
 
 msgid "Email notifications"
@@ -1230,9 +1222,7 @@ msgstr ""
 msgid "Edit in progress"
 msgstr ""
 
-msgid ""
-"Are you sure that you want to continue? By continuing unsaved changes will "
-"be lost."
+msgid "Are you sure that you want to continue? By continuing unsaved changes will be lost."
 msgstr ""
 
 msgid "Dialog is open"
@@ -1781,9 +1771,7 @@ msgstr ""
 msgid "Predicate in use"
 msgstr ""
 
-msgid ""
-"Predicate type cannot be changed because it is already used by following "
-"resources"
+msgid "Predicate type cannot be changed because it is already used by following resources"
 msgstr ""
 
 msgid "Convert to association"
